Call UpdateButtons on mouse_movement data for ALPS device

This fixes problem with B_MOUSE_DOWN messages produced by Thinkpad
TrackPoint buttons. Those messages have 'clicks' parameter always
equal to zero. Solution was suggested by korli. Thanks!

Fixes #8978

Signed-off-by: Siarzhuk Zharski <zharik@gmx.li>